2004-02-04  ------ omnetpp-3.0pre1 released ------

2004-02-03  Andras Varga

	* neddoc.xsl: module etc names in generated .dot files need quotes 
	otherwise they may clash with dot's reserved keywords ("Node")

2003-12-06  Andras Varga

	* opp_nmakemake now will make some effort to find configuser.vc 
	by itself when no -c option is given

2003-12-05  Andras Varga

	* opp_neddoc and parts polished and brought to work on Windows.
	See tests at test/opp_neddoc.

2003-10-02  Andras Varga

	* opp_makemake.in, opp_nmakemake: a thorough rewrite of how 
	multi-directory models are handled. This version should be usable, 
	it's been proven on IPSuite and MPLS (I generated _all_ of its 
	Makefiles including the toplevel one with opp_(n)makemake). 
	The changes in nutshell:
	- opp_(n)makemake no longer invokes `make' in other directories
	  while generating the makefile. (It wasn't a very good idea in
	  the first place)
	- it is now possible to generate a Makefile that imports the 
	  settings from another file (via Makefile inclusion). Thus
	  you don't have to regenerate all the Makefiles (or edit the
	  settings in them) if you move to a different machine or change
	  the compile flags.
	- "recursive make" (descenting into subdirs) is now independent
	  from which directories you want to link with object files.
	  Recursive make is enabled with the -r option, and it'll simply
	  cause the Makefile to go into all subdirs and run make in them.
	  That's all. If you need to ensure a specific order or you want
	  to leave out certain subdirs, you can put additional dependencies
	  and rules into makefrag (makefrag.vc).
	- any file you list on the opp_(n)makemake command line is still 
	  something to link with. No change here. 
	- any directory on the opp_(n)makemake command line is a something
	  that (will) contain object files you want to link with. 
	  opp_(n)makemake won't specifically list the object files in the 