@@ -1,3 +1,7 @@
+2004-02-06  Andras Varga
+
+	* opp_makemake.in,opp_nmakemake: 'depend' target made recursive
+
 2004-02-04  ------ omnetpp-3.0pre1 released ------
 
 2004-02-03  Andras Varga
